translate 3d and z-index fixes

--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ a {
     width: 260px;
     height: 100%;
     top: 0;
-    z-index: 500;
+    z-index: 9999;
     text-align: left;
   }
 
@@ -166,7 +166,7 @@ a {
     position: absolute;
     top: 20px;
     left: 0;
-    z-index: 11;
+    z-index: 9999;
     display: block;
     text-align: center;
     font-size: 14px;
@@ -432,7 +432,8 @@ header p {
 
 #homeFullScreen .container {
   position:fixed;
-  z-index: 1;
+  z-index: 0;
+  -webkit-transform: translate3d(0,0,0);
 }
 
 .landing {
